# boon

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS_MIGRATION_REALITY_CHECK.md  DOCS_MIGRATION_REPORT.md  FINAL_MIGRATION_STATUS.md  LICENSE  MIGRATION_COLLECTION_SYNTAX.md  MIGRATION_PROGRESS.md  Makefile.toml  README.md  hdl_concatenation_signedness_research.md  prompter.json
crates/boon/: Cargo.toml
crates/boon-engine-actors/: Cargo.toml
crates/boon-engine-actors-lite/: Cargo.toml
crates/boon-engine-actors-lite/src/: acceptance.rs  append_list_preview_runtime.rs  append_list_runtime.rs  bridge.rs  browser_debug.rs  cells_acceptance.rs  cells_lower.rs  cells_preview.rs  cells_runtime.rs  chained_list_remove_bug_preview.rs  checkbox_test_preview.rs  circle_drawer_preview.rs  clock.rs  complex_counter_preview.rs  counter_acceptance.rs  counter_persistence.rs  crud_preview.rs  dispatch.rs  edit_session.rs  editable_list_actions.rs  editable_mapped_list_preview_runtime.rs  editable_mapped_list_runtime.rs  fibonacci_preview.rs  filter_checkbox_bug_preview.rs  filtered_list_view.rs  flight_booker_preview.rs  generic_preview.rs  host_view_preview.rs  host_view_template.rs  ids.rs  input_form_runtime.rs  interactive_preview.rs  interval_preview.rs  ir.rs  ir_executor.rs  latest_preview.rs  layers_preview.rs  lib.rs  list_form_actions.rs  list_map_block_preview.rs  (+47 more)
crates/boon-engine-actors-lite/src/lower/: builtin_registry.rs  generic_semantic.rs  mod.rs
crates/boon-engine-actors/src/: api.rs  bridge.rs  engine.rs  evaluator.rs  interpreter.rs  lib.rs
crates/boon-engine-dd/: Cargo.toml
crates/boon-engine-dd/src/: lib.rs
crates/boon-engine-dd/src/core/: compile.rs  operators.rs  runtime.rs  types.rs  value.rs
crates/boon-engine-dd/src/io/: worker.rs
crates/boon-engine-dd/src/render/: bridge.rs
crates/boon-engine-factory-fabric/: Cargo.toml
crates/boon-engine-factory-fabric/src/: cells.rs  debug.rs  depot.rs  host_view.rs  lib.rs  lower.rs  metrics.rs  parse.rs  runtime.rs  semantics.rs  todo.rs  toggle.rs  ui.rs
crates/boon-engine-wasm/: Cargo.toml
crates/boon-engine-wasm/src/: abi.rs  codegen.rs  debug.rs  exec_ir.rs  lib.rs  lower.rs  runtime.rs  semantic_ir.rs
crates/boon-renderer-zoon/: Cargo.toml
crates/boon-renderer-zoon/src/: lib.rs
crates/boon/src/: lib.rs  parser.rs  platform.rs
crates/boon/src/engine_v2/: address.rs  arena.rs  event_loop.rs  message.rs  mod.rs  node.rs  routing.rs  snapshot.rs
crates/boon/src/evaluator_v2/: mod.rs
crates/boon/src/parser/: formatter.rs  lexer.rs  persistence_resolver.rs  scope_resolver.rs  source.rs  static_expression.rs
crates/boon/src/platform/: browser.rs
playground/: Cargo.toml  Dockerfile  Dockerfile_debug  Makefile.toml  MoonZoon.toml  README.md
playground/.claude/: ralph-loop.local.md
playground/backend/src/: main.rs  style.css
playground/fonts/: Cargo.toml
playground/fonts/src/: main.rs
playground/frontend/: Cargo.toml
playground/frontend/src/: code_editor.rs  main.rs
playground/frontend/src/examples/: EXAMPLES_IMPROVEMENTS.md  checkbox_test.bn
playground/frontend/typescript/bundles/: code_editor.js
playground/frontend/typescript/code_editor/: README.md  boon-language.ts  boon-parser.terms.ts  boon-parser.ts  boon-theme.ts  boon.grammar  code_editor.ts  one-dark-theme.ts  package-lock.json  package.json
tools/: Cargo.toml  DEBUG_WITH_BROWSER.md  codex_review_dd3.md  justfile  review_dd3.sh  verify_dd_v2.sh  verify_typed_api.sh
tools/.chrome-profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
tools/.chrome-profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Top Sites  TransportSecurity  Web Data
tools/.chrome-profile/Default/DawnGraphiteCache/: data_1  index
tools/.chrome-profile/Default/DawnWebGPUCache/: data_1  index
tools/.chrome-profile/Default/Extension Rules/: LOG  LOG.old
tools/.chrome-profile/Default/Extension Scripts/: LOG  LOG.old
tools/.chrome-profile/Default/Extension State/: LOG  LOG.old
tools/.chrome-profile/Default/GCM Store/: LOG  LOG.old
tools/.chrome-profile/Default/GPUCache/: data_0  data_1  index
tools/.chrome-profile/Default/Platform Notifications/: LOG  LOG.old
tools/.chrome-profile/Default/Search Logos/: metadata
tools/.chrome-profile/Default/Session Storage/: LOG  LOG.old
tools/.chrome-profile/Default/Sessions/: Session_13409083635017592  Tabs_13408987647620494
tools/.chrome-profile/Default/Site Characteristics Database/: LOG  LOG.old
tools/.chrome-profile/Default/WebStorage/: QuotaManager
tools/.chrome-profile/Default/shared_proto_db/: LOG  LOG.old
tools/.chrome-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  index
tools/.chrome-profile/GraphiteDawnCache/: data_1  index
tools/.chrome-profile/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlCsdDownloadAllowlist.store  UrlMalBin.store  UrlMalware.store  UrlSoceng.store  UrlUws.store
tools/.chrome-profile/ShaderCache/: data_0  data_1  index
tools/.chrome-profile/WidevineCdm/: latest-component-updated-widevine-cdm
tools/.chrome-profile/component_crx_cache/: metadata.json
tools/.chrome-profile/segmentation_platform/: ukm_db
tools/.claude/: ralph-loop.local.md
tools/extension/: background.js  console-capture.js  content.js  manifest.json  popup.html  popup.js
tools/scripts/: test_todo_mvc_edit_titles_cross_engine.sh  test_todo_mvc_physical.sh  test_todo_mvc_wasm.sh  verify_7guis_complete.sh  visual_debug.sh
tools/src/: cdp.rs  main.rs  port_config.rs
tools/src/commands/: backend_metrics.rs  browser.rs  console.rs  expected.rs  inject.rs  measure.rs  mod.rs  pixel_diff.rs  run.rs  screenshot.rs  scroll.rs  test.rs  test_examples.rs  verify_actors.rs  verify_actors_lite.rs  verify_factory_fabric.rs  verify_integrity.rs  verify_wasm_lowering.rs
tools/src/mcp/: mod.rs
tools/src/ws_server/: mod.rs  protocol.rs
(+1344 files in other folders)
