[workspace]
resolver = "3"
members = [
    "frontend",
    "backend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# zoon = { path = "../../MoonZoon/crates/zoon" }
# moon = { path = "../../MoonZoon/crates/moon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "8ee7546bf42ff8e87d14d498bf9863728a18ebe5" }
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "8ee7546bf42ff8e87d14d498bf9863728a18ebe5" }
