[package]
name = "boon-tools"
version = "0.1.0"
edition = "2021"

# Standalone crate - not part of boon workspace
[workspace]

[[bin]]
name = "boon-tools"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
env_logger = "0.11"
log = "0.4"

# Base64 for screenshot fallback
base64 = "0.21"

# File watching for extension hot reload
notify = "6"

# Find browser binaries in PATH
which = "7"
