[package]
name = "boon-engine-actors"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BoonLang/boon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Actors browser engine for Boon"
categories = ["Compilers"]
license = "UPL-1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
boon = { path = "../boon" }
ariadne = "0.5"
chumsky = { version = "0.11", features = ["pratt", "serde"] }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json_any_key = "2.0.0"
boon-scene = { path = "../boon-scene" }
boon-monitor-protocol = { path = "../boon-monitor-protocol" }
boon-renderer-zoon = { path = "../boon-renderer-zoon" }
ulid = { version = "1.2.1", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "19c6cf6b4d07cd27bee7758977ef1ea4d5b9933d" }
futures-channel = { version = "0.3", features = ["sink"] }
smallvec = "1"

[features]
default = ["debug-channels"]
debug-channels = []
actors-metrics = []
