[package]
name = "boon-engine-factory-fabric"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BoonLang/boon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "FactoryFabric browser engine for Boon"
categories = ["Compilers"]
license = "UPL-1.0"

[dependencies]
boon = { path = "../boon" }
boon-engine-actors-lite = { path = "../boon-engine-actors-lite" }
boon-renderer-zoon = { path = "../boon-renderer-zoon" }
boon-scene = { path = "../boon-scene" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
