[package]
name = "boon-engine-wasm"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BoonLang/boon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Wasm browser engine for Boon"
categories = ["Compilers"]
license = "UPL-1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
boon = { path = "../boon" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
boon-scene = { path = "../boon-scene" }
boon-renderer-zoon = { path = "../boon-renderer-zoon" }
ulid = { version = "1.2.1", features = ["serde"] }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "19c6cf6b4d07cd27bee7758977ef1ea4d5b9933d" }
wasm-encoder = "0.225"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

