[package]
name = "boon"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BoonLang/boon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Boon Lang"
categories = ["Compilers"]
license = "UPL-1.0"
readme = "../README.md"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
chumsky = { version = "0.11", features = ["pratt", "serde"] }
ariadne = "0.5"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json_any_key = "2.0.0"
serde_json = { version = "1", optional = true }

ulid = { version = "1.2.0", features = ["serde"] }
# `rustflags = ["--cfg", 'getrandom_backend="wasm_js"']` has to be in workspace .cargo/config.toml
getrandom = { version = "0.3", features = ["wasm_js"] }

# zoon = { path = "../../../MoonZoon/crates/zoon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "19c6cf6b4d07cd27bee7758977ef1ea4d5b9933d" }

# Enable `sink` feature for Sender to implement Sink trait (required for async .send())
futures-channel = { version = "0.3", features = ["sink"] }

[features]
default = ["debug-channels"]

# Enable debug logging and timeouts for channel operations.
# Useful for detecting deadlocks and monitoring backpressure.
# Enabled by default. To disable for production:
# `cargo build --no-default-features`
debug-channels = []

# CLI platform support with serde_json for output formatting
cli = ["dep:serde_json"]

# Use the new arena-based engine (engine_v2) instead of the old actor-based engine.
# This is the new reactive engine being developed in M0/M1.
engine-v2 = []
