[package]
name = "boon"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BoonLang/boon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Boon Lang"
categories = ["Compilers"]
license = "UPL-1.0"
readme = "../README.md"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
chumsky = { version = "0.11", features = ["pratt", "serde"] }
ariadne = "0.5"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json_any_key = "2.0.0"
serde_json = { version = "1", optional = true }

ulid = { version = "1.2.1", features = ["serde"] }
# `rustflags = ["--cfg", 'getrandom_backend="wasm_js"']` has to be in workspace .cargo/config.toml
getrandom = { version = "0.3", features = ["wasm_js"] }

# zoon = { path = "../../../MoonZoon/crates/zoon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "19c6cf6b4d07cd27bee7758977ef1ea4d5b9933d" }

# Enable `sink` feature for Sender to implement Sink trait (required for async .send())
futures-channel = { version = "0.3", features = ["sink"] }

smallvec = "1"

# Differential Dataflow engine dependencies (optional, used with engine-dd feature)
# timely 0.26 removes deprecated InputSession, fixes progress tracking
# differential-dataflow 0.19 updated for timely 0.26
ordered-float = { version = "4", optional = true, features = ["serde"] }
indexmap = { version = "2", optional = true }
js-sys = { version = "0.3", optional = true }
timely = { version = "0.26", optional = true }
differential-dataflow = { version = "0.19", optional = true }

[features]
default = ["debug-channels", "engine-dd"]

# Engine selection features - at least one must be enabled
# Use engine-actors for the legacy actor-based reactive engine
# Use engine-dd for the differential dataflow engine
# Use engine-both to enable runtime engine switching
engine-actors = []
engine-dd = ["dep:ordered-float", "dep:indexmap", "dep:js-sys", "dep:timely", "dep:differential-dataflow"]
engine-both = ["engine-actors", "engine-dd"]

# Enable debug logging and timeouts for channel operations.
# Useful for detecting deadlocks and monitoring backpressure.
# Enabled by default. To disable for production:
# `cargo build --no-default-features --features engine-actors`
debug-channels = []

# Performance instrumentation counters for the actors engine.
# When enabled, atomic counters track key operations (actor lifecycle, list changes,
# bridge events, evaluator slots, persistence writes). Use dump_metrics_to_console()
# to log counters. Compiles to zero overhead when disabled.
actors-metrics = ["engine-actors"]

# CLI platform support with serde_json for output formatting
cli = ["dep:serde_json"]
