[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
boon = { path = "../../crates/boon" }
ulid = { version = "1.2.0", features = ["serde"] }

[features]
# Enable both engines by default for runtime switching
default = ["engine-both"]

# Engine feature passthrough - these enable the corresponding boon engine features
engine-actors = ["boon/engine-actors"]
engine-dd = ["boon/engine-dd"]
engine-both = ["boon/engine-both"]
