[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
boon = { path = "../../crates/boon" }
ulid = { version = "1.2.0", features = ["serde"] }

[features]
# Enable all engines by default for runtime switching
default = ["engine-all"]

# Engine feature passthrough - these enable the corresponding boon engine features
engine-actors = ["boon/engine-actors"]
engine-dd = ["boon/engine-dd"]
engine-wasm = ["boon/engine-wasm"]
engine-wasm-pro = ["boon/engine-wasm-pro"]
engine-both = ["engine-actors", "engine-dd"]
engine-all = ["engine-actors", "engine-dd", "engine-wasm", "engine-wasm-pro"]
